--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="daa2b3">  <td>23/04/11 16:03:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@272113c4]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/04/11 16:03:28</td>   <td>8100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidations.submitOrder()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@272113c4]">submitOrder</td> 
-  <td>main@1892627171</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>23/04/11 16:03:29</td>   <td>8641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@272113c4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1892627171</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/04/11 16:15:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidations.LoginErrorValidation()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@73e9cf30]">LoginErrorValidation</td> 
+  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/04/11 16:15:41</td>   <td>7554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidations.ProductErrorValifation()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@73e9cf30]">ProductErrorValifation</td> 
+  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="daa2b3">  <td>23/04/11 16:15:34</td>   <td>1028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@73e9cf30]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="daa2b3">  <td>23/04/11 16:15:34</td>   <td>1028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@73e9cf30]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="daa2b3">  <td>23/04/11 16:15:44</td>   <td>10270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@73e9cf30]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="daa2b3">  <td>23/04/11 16:15:44</td>   <td>10270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.ErrorValidations@73e9cf30]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
 </table>
