--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\AliaksandraSavelyeva\AppData\Local\Temp\testng-eclipse--1247809305\testng-customsuite.xml</span>
+                    <span>C:\Users\AliaksandraSavelyeva\AppData\Local\Temp\testng-eclipse--158240117\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SeleniumFramework.tests.ErrorValidations" class="method navigator-link" hash-for-method="LoginErrorValidation">LoginErrorValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SeleniumFramework.tests.SubmitOrderTest" class="method navigator-link" hash-for-method="OrderHistoryTest">OrderHistoryTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SeleniumFramework.tests.ErrorValidations" class="method navigator-link" hash-for-method="ProductErrorValifation">ProductErrorValifation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SeleniumFramework.tests.SubmitOrderTest" class="method navigator-link" hash-for-method="SubmitOrder">SubmitOrder</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">SeleniumFramework.tests.ErrorValidations</span>
+              <span class="class-name">SeleniumFramework.tests.SubmitOrderTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginErrorValidation">
-                  </a> <!-- LoginErrorValidation -->
-                  <span class="method-name">LoginErrorValidation</span>
+                  <a name="OrderHistoryTest">
+                  </a> <!-- OrderHistoryTest -->
+                  <span class="method-name">OrderHistoryTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ProductErrorValifation">
-                  </a> <!-- ProductErrorValifation -->
-                  <span class="method-name">ProductErrorValifation</span>
+                  <a name="SubmitOrder">
+                  </a> <!-- SubmitOrder -->
+                  <span class="method-name">SubmitOrder</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\AliaksandraSavelyeva\AppData\Local\Temp\testng-eclipse--1247809305\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\AliaksandraSavelyeva\AppData\Local\Temp\testng-eclipse--158240117\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;SeleniumFramework.tests.ErrorValidations&quot;/&gt;
+      &lt;class name=&quot;SeleniumFramework.tests.SubmitOrderTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -199,18 +199,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ProductErrorValifation')
-data.setCell(0, 2, 'SeleniumFramework.tests.ErrorValidations')
-data.setCell(0, 3, 2712);
+data.setCell(0, 1, 'SubmitOrder')
+data.setCell(0, 2, 'SeleniumFramework.tests.SubmitOrderTest')
+data.setCell(0, 3, 17574);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginErrorValidation')
-data.setCell(1, 2, 'SeleniumFramework.tests.ErrorValidations')
-data.setCell(1, 3, 660);
+data.setCell(1, 1, 'OrderHistoryTest')
+data.setCell(1, 2, 'SeleniumFramework.tests.SubmitOrderTest')
+data.setCell(1, 3, 960);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,30 +236,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">SeleniumFramework.tests.ErrorValidations</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">SeleniumFramework.tests.SubmitOrderTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginErrorValidation</span>
-                <span class="method-start">9079 ms</span>
+                <span class="method-name">SubmitOrder</span>
+                <span class="method-start">8062 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9745 ms</span>
+                <span class="method-start">25642 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
-                <span class="method-start">10106 ms</span>
+                <span class="method-start">25900 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">ProductErrorValifation</span>
-                <span class="method-start">16633 ms</span>
+                <span class="method-name">OrderHistoryTest</span>
+                <span class="method-start">32793 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">19348 ms</span>
+                <span class="method-start">33755 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
