--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bce87c">  <td>23/04/11 17:59:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.OrderHistoryTest()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@2d52216b]">OrderHistoryTest</td> 
-  <td>main@597307515</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/04/11 17:58:50</td>   <td>-24731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.SubmitOrder()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@2d52216b]">SubmitOrder</td> 
-  <td>main@597307515</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>23/04/11 17:59:08</td>   <td>-6892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@2d52216b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@597307515</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>23/04/11 17:59:08</td>   <td>-6892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@2d52216b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@597307515</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>23/04/11 17:59:16</td>   <td>964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@2d52216b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@597307515</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>23/04/11 17:59:16</td>   <td>964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@2d52216b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@597307515</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>23/05/22 16:54:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:cucumber.TestNGTestRunner@79e4c792]">runScenario</td> 
+  <td>main@93199773</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>23/05/22 16:54:12</td>   <td>-910</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:cucumber.TestNGTestRunner@79e4c792]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@93199773</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>23/05/22 16:54:36</td>   <td>23161</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:cucumber.TestNGTestRunner@79e4c792]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@93199773</td>   <td></td> </tr>
 </table>
